# stm32g4-ucpd-sample

./: .gitmodules  .mxproject  CMakeLists.txt  STM32G431C8Tx_FLASH.ld  ucpd-sample.ioc
Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tracer_emb_conf.h  tusb_config.h  usbpd.h  usbpd_devices_conf.h  usbpd_dpm_conf.h  usbpd_dpm_user.h  usbpd_gui_memmap.h  usbpd_pdo_defs.h
Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  usbpd.c  usbpd_dpm_core.c  usbpd_dpm_user.c  usbpd_pwr_if.c  usbpd_pwr_user.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
